@@ -54,7 +54,7 @@ ifeq ($(CONFIG_EXAMPLES_COMPOSITE),y)
 CONFIGURED_APPS += examples/composite
 endif
 
-ifeq ($(CONFIG_EXAMPLES_CXXTEST,y)
+ifeq ($(CONFIG_EXAMPLES_CXXTEST),y)
 CONFIGURED_APPS += examples/cxxtest
 endif
 
